Complete Dubbo Monitor for MongoDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ dubbo.application.name=dubbo-monitor
 dubbo.application.owner=handu
 dubbo.registry.address=zookeeper://172.16.1.178:2181
 dubbo.protocol.port=6060
+
+#MongoDB Setting
+db.url=172.16.1.85
+db.port=27017
