Add Authority Certification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ dubbo.protocol.port=6060
 #MongoDB Setting
 db.url=172.16.1.85
 db.port=27017
+
+#System Manager
+manager.username=admin
+manager.password=admin
