--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <spring.data.version>1.7.2.RELEASE</spring.data.version>
         <jackson.version>2.3.3</jackson.version>
         <junit.version>4.11</junit.version>
+        <guava.version>16.0.1</guava.version>
     </properties>
 
     <dependencies>
@@ -201,6 +202,11 @@
                     <groupId>com.fasterxml.jackson.core</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
