增加用户、库、密码配置项

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,9 @@ dubbo.protocol.port=6060
 #MongoDB Setting
 db.url=127.0.0.1
 db.port=27017
+db.username=
+db.database=
+db.password=
 
 #System Manager
 manager.username=admin
