--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-dubbo.application.name=dubbo-monitor-x
+dubbo.application.name=dubbo-monitor
 dubbo.application.owner=
 dubbo.registry.address=zookeeper://192.168.1.114:2181?backup=192.168.1.114:2182,192.168.1.114:2183
 dubbo.protocol.port=6060
